--- a/WebContent/VAADIN/themes/todomvc-css/styles.css
+++ b/WebContent/VAADIN/themes/todomvc-css/styles.css
@@ -12,6 +12,8 @@
   -ms-font-smoothing: antialiased;
   -o-font-smoothing: antialiased;
   font-smoothing: antialiased;
+  overflow: auto;
+  height: auto;
 }
 
 
@@ -27,7 +29,14 @@
 	      0 25px 50px 0 rgba(0, 0, 0, 0.15);
   width: 550px;
   margin: 130px auto 40px auto;
-  //height: auto;
+  min-height: 50px;
+}
+
+.v-overlay-container {
+	box-shadow: none;
+	margin: 0;
+	border: none;
+	min-height: 0;
 }
 
 .v-app:before {
@@ -41,7 +50,7 @@
 	height: 100%;
 }
 
-.v-app .title {
+.title {
 	position: absolute;
   top: -120px;
   width: 100%;
@@ -58,4 +67,59 @@
 	text-rendering: optimizeLegibility;
 }
 
+.v-slot-title {
+	padding-top: 15px;
+  border-radius: inherit;
+}
 
+.v-slot-title:before {
+	content: '';
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: 0;
+	height: 15px;
+	z-index: 2;
+	border-bottom: 1px solid #6c615c;
+	background: #8d7d77;
+	background: -webkit-gradient(linear, left top, left bottom, from(rgba(132, 110, 100, 0.8)),to(rgba(101, 84, 76, 0.8)));
+	background: -webkit-linear-gradient(top, rgba(132, 110, 100, 0.8), rgba(101, 84, 76, 0.8));
+	background: linear-gradient(top, rgba(132, 110, 100, 0.8), rgba(101, 84, 76, 0.8));
+	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#9d8b83', EndColorStr='#847670');
+	border-top-left-radius: 1px;
+	border-top-right-radius: 1px;
+}
+
+.v-ui {
+	overflow: visible;
+}
+
+.new-todo {
+	position: relative;
+	margin: 0;
+	width: 100%;
+	font-size: 24px;
+	font-family: inherit;
+	line-height: 1.4em;
+	border: 0;
+	outline: none;
+	color: inherit;
+	padding: 6px;
+	border: 1px solid #999;
+	box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	-o-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-font-smoothing: antialiased;
+	-moz-font-smoothing: antialiased;
+	-ms-font-smoothing: antialiased;
+	-o-font-smoothing: antialiased;
+	font-smoothing: antialiased;
+	
+	padding: 16px 16px 16px 60px !important;
+	border: none;
+	background: rgba(0, 0, 0, 0.02);
+	z-index: 2;
+	box-shadow: none;
+}
