Added footer element with necessary controls
Styles are still missing

--- a/WebContent/VAADIN/themes/todomvc-css/styles.css
+++ b/WebContent/VAADIN/themes/todomvc-css/styles.css
@@ -316,3 +316,7 @@ input[type="checkbox"] {
 	padding: 13px 17px 12px 17px;
 	margin: 0 0 0 43px;
 }
+
+.footer .filters .v-nativebutton {
+	font: initial;
+}
