--- a/WebContent/VAADIN/themes/todomvc-css/styles.css
+++ b/WebContent/VAADIN/themes/todomvc-css/styles.css
@@ -21,6 +21,10 @@ input[type="checkbox"] {
 	outline: none;
 }
 
+.v-nativebutton .v-nativebutton-caption {
+	vertical-align: baseline;
+}
+
 
 .v-generated-body {
 	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -36,6 +40,16 @@ input[type="checkbox"] {
   font-smoothing: antialiased;
   overflow: auto;
   height: auto;
+}
+
+/* Need to override these because of Vaadin's defaults */
+.v-widget {
+	font-size: 14px;
+	line-height: 1.4em;
+}
+
+.v-nativebutton {
+  line-height: normal;
 }
 
 
@@ -317,6 +331,67 @@ input[type="checkbox"] {
 	margin: 0 0 0 43px;
 }
 
-.footer .filters .v-nativebutton {
-	font: initial;
+.footer {
+	overflow: visible;
+	color: #777;
+	padding: 0 15px;
+	position: absolute;
+	right: 0;
+	bottom: -31px;
+	left: 0;
+	height: 20px;
+	z-index: 1;
+	text-align: center;
+}
+
+.footer:before {
+	content: '';
+	position: absolute;
+	right: 0;
+	bottom: 31px;
+	left: 0;
+	height: 50px;
+	z-index: -1;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3),
+	      0 6px 0 -3px rgba(255, 255, 255, 0.8),
+	      0 7px 1px -3px rgba(0, 0, 0, 0.3),
+	      0 43px 0 -6px rgba(255, 255, 255, 0.8),
+	      0 44px 2px -6px rgba(0, 0, 0, 0.2);
+}
+
+.todo-count {
+	float: left;
+  text-align: left;
+}
+
+.filters {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	position: absolute;
+	right: 0;
+	left: 0;
+	text-align: inherit;
+}
+
+.filters .v-nativebutton {
+	color: #83756f;
+	margin: 2px 8px 2px 2px;
+	text-decoration: none;
+}
+
+.filters .v-nativebutton.selected {
+	font-weight: bold;
+}
+
+.clear-completed {
+	float: right;
+	position: relative;
+	line-height: 20px;
+	text-decoration: none;
+	background: rgba(0, 0, 0, 0.1);
+	font-size: 11px;
+	padding: 0 10px;
+	border-radius: 3px;
+	box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.2);
 }
