--- a/WebContent/VAADIN/themes/todomvc-css/styles.css
+++ b/WebContent/VAADIN/themes/todomvc-css/styles.css
@@ -327,7 +327,7 @@ input[type="checkbox"] {
 .todo-row.editing .v-textfield {
 	display: block;
 	width: 506px;
-	padding: 13px 17px 12px 17px;
+	padding: 13px 17px 12px 17px !important;
 	margin: 0 0 0 43px;
 }
 
