--- a/WebContent/VAADIN/themes/todomvc-css/styles.css
+++ b/WebContent/VAADIN/themes/todomvc-css/styles.css
@@ -53,7 +53,7 @@ input[type="checkbox"] {
 }
 
 
-.v-app {
+#todoapp {
 	background: #fff;
 	background: rgba(255, 255, 255, 0.9);
 	margin: 130px 0 40px 0;
@@ -68,14 +68,9 @@ input[type="checkbox"] {
   min-height: 50px;
 }
 
-.v-overlay-container {
-	box-shadow: none;
-	margin: 0;
-	border: none;
-	min-height: 0;
-}
 
-.v-app:before {
+
+#todoapp:before {
 	content: '';
 	border-left: 1px solid #f5d6d6;
 	border-right: 1px solid #f5d6d6;
@@ -86,7 +81,7 @@ input[type="checkbox"] {
 	height: 100%;
 }
 
-.title {
+h1 {
 	position: absolute;
   top: -120px;
   width: 100%;
@@ -101,14 +96,17 @@ input[type="checkbox"] {
 	-ms-text-rendering: optimizeLegibility;
 	-o-text-rendering: optimizeLegibility;
 	text-rendering: optimizeLegibility;
+	
+	/* Override Vaadin defaults */
+	line-height: inherit !important;
 }
 
-.v-slot-title {
+#header {
 	padding-top: 15px;
   border-radius: inherit;
 }
 
-.v-slot-title:before {
+#header:before {
 	content: '';
 	position: absolute;
 	top: 0;
