--- a/WebContent/VAADIN/themes/todomvc-css/styles.css
+++ b/WebContent/VAADIN/themes/todomvc-css/styles.css
@@ -56,7 +56,6 @@ input[type="checkbox"] {
 #todoapp {
 	background: #fff;
 	background: rgba(255, 255, 255, 0.9);
-	margin: 130px 0 40px 0;
 	border: 1px solid #ccc;
 	position: relative;
 	border-top-left-radius: 2px;
@@ -65,7 +64,7 @@ input[type="checkbox"] {
 	      0 25px 50px 0 rgba(0, 0, 0, 0.15);
   width: 550px;
   margin: 130px auto 40px auto;
-  min-height: 50px;
+  overflow: visible;
 }
 
 
@@ -102,6 +101,7 @@ h1 {
 }
 
 #header {
+	display: block;
 	padding-top: 15px;
   border-radius: inherit;
 }
@@ -396,4 +396,16 @@ h1 {
 	padding: 0 10px;
 	border-radius: 3px;
 	box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.2);
+}
+
+#info {
+	margin: 65px auto 0;
+	color: #a6a6a6;
+	font-size: 12px;
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
+	text-align: center;
+}
+
+#info a {
+	color: inherit;
 }
