--- a/WebContent/VAADIN/themes/todomvc-css/styles.css
+++ b/WebContent/VAADIN/themes/todomvc-css/styles.css
@@ -25,6 +25,11 @@ input[type="checkbox"] {
 	vertical-align: baseline;
 }
 
+/* Override Vaadin default */
+.v-csslayout {
+	overflow: visible;
+}
+
 
 .v-generated-body {
 	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -64,7 +69,6 @@ input[type="checkbox"] {
 	      0 25px 50px 0 rgba(0, 0, 0, 0.15);
   width: 550px;
   margin: 130px auto 40px auto;
-  overflow: visible;
 }
 
 
@@ -159,7 +163,6 @@ h1 {
 }
 
 #main {
-	overflow: visible;
 	position: relative;
 	z-index: 2;
 	border-top: 1px dotted #adadad;
@@ -334,7 +337,6 @@ h1 {
 }
 
 #footer {
-	overflow: visible;
 	color: #777;
 	padding: 0 15px;
 	position: absolute;
