Fixed input placeholder color

--- a/WebContent/VAADIN/themes/todomvc-css/styles.css
+++ b/WebContent/VAADIN/themes/todomvc-css/styles.css
@@ -162,6 +162,10 @@ h1 {
 	box-shadow: none;
 }
 
+#new-todo.v-textfield-prompt {
+	color: #a9a9a9;
+}
+
 #main {
 	position: relative;
 	z-index: 2;
