--- a/WebContent/VAADIN/themes/todomvc/styles.scss
+++ b/WebContent/VAADIN/themes/todomvc/styles.scss
@@ -3,6 +3,23 @@
 // This file prefixes all rules with the theme name to avoid causing conflicts with other themes
 // The actual styles should be defined in _todomvc.scss
 
+
+.v-generated-body {
+  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  line-height: 1.4em;
+  background: #eaeaea url('img/bg.png');
+  color: #4d4d4d;
+  width: 550px;
+  margin: 0 auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-font-smoothing: antialiased;
+  -ms-font-smoothing: antialiased;
+  -o-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  overflow: auto;
+  height: auto;
+}
+
 .todomvc {
   @include todomvc;
 }
