--- a/WebContent/VAADIN/themes/todomvc/_todomvc.scss
+++ b/WebContent/VAADIN/themes/todomvc/_todomvc.scss
@@ -25,10 +25,6 @@
 	  outline: none;
 	}
 	
-	.v-nativebutton .v-nativebutton-caption {
-	  vertical-align: baseline;
-	}
-	
 	/* Override Vaadin default */
 	.v-csslayout {
 	  overflow: visible;
@@ -42,7 +38,11 @@
 	
 	.v-nativebutton {
 	  line-height: normal;
-	}
+	  
+	  .v-nativebutton-caption {
+      vertical-align: baseline;
+    }
+  }
 	
 	
 	#todoapp {
@@ -56,19 +56,17 @@
 	        0 25px 50px 0 rgba(0, 0, 0, 0.15);
 	  width: 550px;
 	  margin: 130px auto 40px auto;
-	}
-	
-	
-	
-	#todoapp:before {
-	  content: '';
-	  border-left: 1px solid #f5d6d6;
-	  border-right: 1px solid #f5d6d6;
-	  width: 2px;
-	  position: absolute;
-	  top: 0;
-	  left: 40px;
-	  height: 100%;
+
+    &:before {
+		  content: '';
+		  border-left: 1px solid #f5d6d6;
+		  border-right: 1px solid #f5d6d6;
+		  width: 2px;
+		  position: absolute;
+		  top: 0;
+		  left: 40px;
+		  height: 100%;
+		}
 	}
 	
 	h1 {
@@ -95,24 +93,24 @@
 	  display: block;
 	  padding-top: 15px;
 	  border-radius: inherit;
-	}
-	
-	#header:before {
-	  content: '';
-	  position: absolute;
-	  top: 0;
-	  right: 0;
-	  left: 0;
-	  height: 15px;
-	  z-index: 2;
-	  border-bottom: 1px solid #6c615c;
-	  background: #8d7d77;
-	  background: -webkit-gradient(linear, left top, left bottom, from(rgba(132, 110, 100, 0.8)),to(rgba(101, 84, 76, 0.8)));
-	  background: -webkit-linear-gradient(top, rgba(132, 110, 100, 0.8), rgba(101, 84, 76, 0.8));
-	  background: linear-gradient(top, rgba(132, 110, 100, 0.8), rgba(101, 84, 76, 0.8));
-	  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#9d8b83', EndColorStr='#847670');
-	  border-top-left-radius: 1px;
-	  border-top-right-radius: 1px;
+
+    &:before {
+		  content: '';
+		  position: absolute;
+		  top: 0;
+		  right: 0;
+		  left: 0;
+		  height: 15px;
+		  z-index: 2;
+		  border-bottom: 1px solid #6c615c;
+		  background: #8d7d77;
+		  background: -webkit-gradient(linear, left top, left bottom, from(rgba(132, 110, 100, 0.8)),to(rgba(101, 84, 76, 0.8)));
+		  background: -webkit-linear-gradient(top, rgba(132, 110, 100, 0.8), rgba(101, 84, 76, 0.8));
+		  background: linear-gradient(top, rgba(132, 110, 100, 0.8), rgba(101, 84, 76, 0.8));
+		  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#9d8b83', EndColorStr='#847670');
+		  border-top-left-radius: 1px;
+		  border-top-right-radius: 1px;
+		}
 	}
 	
 	.v-ui {
@@ -147,10 +145,10 @@
 	  background: rgba(0, 0, 0, 0.02);
 	  z-index: 2;
 	  box-shadow: none;
-	}
-	
-	#new-todo.v-textfield-prompt {
-	  color: #a9a9a9;
+
+    &.v-textfield-prompt {
+      color: #a9a9a9;
+    }
 	}
 	
 	#main {
@@ -159,173 +157,176 @@
 	  border-top: 1px dotted #adadad;
 	}
 	
-	#toggle-all input {
-	  position: absolute;
-	  top: -42px;
-	  left: -4px;
-	  width: 40px;
-	  text-align: center;
-	  /* Mobile Safari */
-	  border: none;
-	  
-	  top: -56px;
-	  left: -15px;
-	  width: 65px;
-	  height: 41px;
-	  -webkit-transform: rotate(90deg);
-	  -ms-transform: rotate(90deg);
-	  transform: rotate(90deg);
-	  -webkit-appearance: none;
-	  appearance: none;
-	}
-	
-	#toggle-all input:before {
-	  content: '\00bb';
-	  font-size: 28px;
-	  color: #d9d9d9;
-	  padding: 0 25px 7px;
-	}
-	
-	#toggle-all input:checked:before {
-	  color: #737373;
-	}
-	
-	#toggle-all label {
-	  display: none;
+	#toggle-all {
+		input {
+		  position: absolute;
+		  width: 40px;
+		  text-align: center;
+		  /* Mobile Safari */
+		  border: none;
+		  
+		  top: -56px;
+		  left: -15px;
+		  width: 65px;
+		  height: 41px;
+		  -webkit-transform: rotate(90deg);
+		  -ms-transform: rotate(90deg);
+		  transform: rotate(90deg);
+		  -webkit-appearance: none;
+		  appearance: none;
+
+      &:before {
+			  content: '\00bb';
+			  font-size: 28px;
+			  color: #d9d9d9;
+			  padding: 0 25px 7px;
+			}
+			
+			&:checked:before {
+			  color: #737373;
+			}
+    }
+		
+		label {
+		  display: none;
+		}
 	}
 	
 	.todo-row {
 	  position: relative;
 	  font-size: 24px;
 	  border-bottom: 1px dotted #ccc;
-	}
-	
-	.todo-row:last-child {
-	  border-bottom: none;
-	}
-	
-	.todo-row .v-checkbox input {
-	  text-align: center;
-	  width: 40px;
-	  /* auto, since non-WebKit browsers doesn't support input styling */
-	  height: auto;
-	  position: absolute;
-	  top: 0;
-	  bottom: 0;
-	  margin: auto 0;
-	  /* Mobile Safari */
-	  border: none;
-	  -webkit-appearance: none;
-	  -ms-appearance: none;
-	  -o-appearance: none;
-	  appearance: none;
-	  
-	  background: none;
-	  height: 40px;
-	}
-	
-	.todo-row .v-checkbox input:after {
-	  content: '\2713';
-	  /* 40 + a couple of pixels visual adjustment */
-	  line-height: 43px;
-	  font-size: 20px;
-	  color: #d9d9d9;
-	  text-shadow: 0 -1px 0 #bfbfbf;
-	}
-	
-	.todo-row .v-checkbox input:checked:after {
-	  color: #85ada7;
-	  text-shadow: 0 1px 0 #669991;
-	  bottom: 1px;
-	  position: relative;
-	}
-	
-	.todo-row .v-label {
-	  font: inherit;
-	  white-space: pre;
-	  word-break: break-word;
-	  padding: 15px 60px 15px 15px;
-	  margin-left: 45px;
-	  display: block;
-	  line-height: 1.2;
-	  -webkit-transition: color 0.4s;
-	  transition: color 0.4s;
-	  white-space: normal;
-	}
-	
-	.todo-row.completed .v-label {
-	  color: #a9a9a9;
-	  text-decoration: line-through;
-	}
-	
-	.todo-row .destroy {
-	  display: none;
-	  position: absolute;
-	  top: 0;
-	  right: 10px;
-	  bottom: 0;
-	  width: 40px;
-	  height: 40px;
-	  margin: auto 0;
-	  font-size: 22px;
-	  color: #a88a8a;
-	  -webkit-transition: all 0.2s;
-	  transition: all 0.2s;
-	}
-	
-	.todo-row .destroy:before {
-	  content: '\2716';
-	}
-	
-	.todo-row .destroy:hover {
-	  text-shadow: 0 0 1px #000,
-	       0 0 10px rgba(199, 107, 107, 0.8);
-	  -webkit-transform: scale(1.3);
-	  -ms-transform: scale(1.3);
-	  transform: scale(1.3);
-	}
-	
-	.todo-row:hover .destroy {
-	  display: block;
-	}
-	
-	.todo-row .v-textfield {
-	  position: relative;
-	  margin: 0;
-	  width: 100%;
-	  font-size: 24px;
-	  font-family: inherit;
-	  line-height: 1.4em;
-	  border: 0;
-	  outline: none;
-	  color: inherit;
-	  padding: 6px !important;
-	  border: 1px solid #999;
-	  box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
-	  -moz-box-sizing: border-box;
-	  -ms-box-sizing: border-box;
-	  -o-box-sizing: border-box;
-	  box-sizing: border-box;
-	  -webkit-font-smoothing: antialiased;
-	  -moz-font-smoothing: antialiased;
-	  -ms-font-smoothing: antialiased;
-	  -o-font-smoothing: antialiased;
-	  font-smoothing: antialiased;
-	  display: none;
-	}
-	
-	.todo-row.editing .v-checkbox,
-	.todo-row.editing .v-label,
-	.todo-row.editing .destroy {
-	  display: none;
-	}
-	
-	.todo-row.editing .v-textfield {
-	  display: block;
-	  width: 506px;
-	  padding: 13px 17px 12px 17px !important;
-	  margin: 0 0 0 43px;
-	}
+		
+		
+		&:last-child {
+		  border-bottom: none;
+		}
+		
+		.v-checkbox input {
+		  text-align: center;
+		  width: 40px;
+		  /* auto, since non-WebKit browsers doesn't support input styling */
+		  height: auto;
+		  position: absolute;
+		  top: 0;
+		  bottom: 0;
+		  margin: auto 0;
+		  /* Mobile Safari */
+		  border: none;
+		  -webkit-appearance: none;
+		  -ms-appearance: none;
+		  -o-appearance: none;
+		  appearance: none;
+		  
+		  background: none;
+		  height: 40px;
+		  
+		  &:after {
+			  content: '\2714';
+			  /* 40 + a couple of pixels visual adjustment */
+			  line-height: 43px;
+			  font-size: 20px;
+			  color: #d9d9d9;
+			  text-shadow: 0 -1px 0 #bfbfbf;
+			}
+			
+			&:checked:after {
+			  color: #85ada7;
+			  text-shadow: 0 1px 0 #669991;
+			  bottom: 1px;
+			  position: relative;
+			}
+		}
+		
+		.v-label {
+		  font: inherit;
+		  white-space: pre;
+		  word-break: break-word;
+		  padding: 15px 60px 15px 15px;
+		  margin-left: 45px;
+		  display: block;
+		  line-height: 1.2;
+		  -webkit-transition: color 0.4s;
+		  transition: color 0.4s;
+		  white-space: normal;
+		}
+		
+		&.completed .v-label {
+		  color: #a9a9a9;
+		  text-decoration: line-through;
+		}
+		
+		.destroy {
+		  display: none;
+		  position: absolute;
+		  top: 0;
+		  right: 10px;
+		  bottom: 0;
+		  width: 40px;
+		  height: 40px;
+		  margin: auto 0;
+		  font-size: 22px;
+		  color: #a88a8a;
+		  -webkit-transition: all 0.2s;
+		  transition: all 0.2s;
+
+      &:before {
+		    content: '\2716';
+		  }
+		 
+      &:hover {
+			  text-shadow: 0 0 1px #000,
+			       0 0 10px rgba(199, 107, 107, 0.8);
+			  -webkit-transform: scale(1.3);
+			  -ms-transform: scale(1.3);
+			  transform: scale(1.3);
+			}
+    }
+		
+		&:hover .destroy {
+		  display: block;
+		}
+		
+		.v-textfield {
+		  position: relative;
+		  margin: 0;
+		  width: 100%;
+		  font-size: 24px;
+		  font-family: inherit;
+		  line-height: 1.4em;
+		  border: 0;
+		  outline: none;
+		  color: inherit;
+		  padding: 6px !important;
+		  border: 1px solid #999;
+		  box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+		  -moz-box-sizing: border-box;
+		  -ms-box-sizing: border-box;
+		  -o-box-sizing: border-box;
+		  box-sizing: border-box;
+		  -webkit-font-smoothing: antialiased;
+		  -moz-font-smoothing: antialiased;
+		  -ms-font-smoothing: antialiased;
+		  -o-font-smoothing: antialiased;
+		  font-smoothing: antialiased;
+		  display: none;
+		}
+		
+		&.editing {
+			.v-checkbox,
+	    .v-label,
+	    .destroy {
+	      display: none;
+	    }
+		}
+		
+		&.editing .v-textfield {
+		  display: block;
+		  width: 506px;
+		  padding: 13px 17px 12px 17px !important;
+		  margin: 0 0 0 43px;
+		}
+  }
 	
 	#footer {
 	  color: #777;
