--- a/WebContent/VAADIN/themes/todomvc/_todomvc.scss
+++ b/WebContent/VAADIN/themes/todomvc/_todomvc.scss
@@ -338,21 +338,21 @@
 	  height: 20px;
 	  z-index: 1;
 	  text-align: center;
-	}
-	
-	#footer:before {
-	  content: '';
-	  position: absolute;
-	  right: 0;
-	  bottom: 31px;
-	  left: 0;
-	  height: 50px;
-	  z-index: -1;
-	  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3),
-	        0 6px 0 -3px rgba(255, 255, 255, 0.8),
-	        0 7px 1px -3px rgba(0, 0, 0, 0.3),
-	        0 43px 0 -6px rgba(255, 255, 255, 0.8),
-	        0 44px 2px -6px rgba(0, 0, 0, 0.2);
+	 
+    &:before {
+		  content: '';
+		  position: absolute;
+		  right: 0;
+		  bottom: 31px;
+		  left: 0;
+		  height: 50px;
+		  z-index: -1;
+		  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3),
+		        0 6px 0 -3px rgba(255, 255, 255, 0.8),
+		        0 7px 1px -3px rgba(0, 0, 0, 0.3),
+		        0 43px 0 -6px rgba(255, 255, 255, 0.8),
+		        0 44px 2px -6px rgba(0, 0, 0, 0.2);
+		}
 	}
 	
 	#todo-count {
@@ -368,16 +368,16 @@
 	  right: 0;
 	  left: 0;
 	  text-align: inherit;
-	}
-	
-	#filters .v-nativebutton {
-	  color: #83756f;
-	  margin: 2px 8px 2px 2px;
-	  text-decoration: none;
-	}
-	
-	#filters .v-nativebutton.selected {
-	  font-weight: bold;
+		
+    .v-nativebutton {
+		  color: #83756f;
+		  margin: 2px 8px 2px 2px;
+		  text-decoration: none;
+		}
+		
+		.v-nativebutton.selected {
+		  font-weight: bold;
+		}
 	}
 	
 	#clear-completed {
@@ -398,11 +398,10 @@
 	  font-size: 12px;
 	  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
 	  text-align: center;
-	}
 	
-	#info a {
-	  color: inherit;
+		a {
+		  color: inherit;
+		}
 	}
-  
 
 }
