--- a/WebContent/VAADIN/themes/todomvc/_todomvc.scss
+++ b/WebContent/VAADIN/themes/todomvc/_todomvc.scss
@@ -1,9 +1,16 @@
 @import "../base/base";
 
+@import "util/mixins";
+
 
 @mixin todomvc {
 	
+	// Include Vaadin Base styles
   @include base;
+  
+  
+  
+  // Resets
   
 	button {
 	  margin: 0;
@@ -14,10 +21,7 @@
 	  vertical-align: baseline;
 	  font-family: inherit;
 	  color: inherit;
-	  -webkit-appearance: none;
-	  -ms-appearance: none;
-	  -o-appearance: none;
-	  appearance: none;
+	  @include appearance(none);
 	}
 	
 	button,
@@ -25,12 +29,15 @@
 	  outline: none;
 	}
 	
-	/* Override Vaadin default */
+	
+	
+	
+	// Override Vaadin defaults
+	
 	.v-csslayout {
 	  overflow: visible;
 	}
 	
-	/* Need to override these because of Vaadin's defaults */
 	.v-widget {
 	  font-size: 14px;
 	  line-height: 1.4em;
@@ -45,6 +52,8 @@
   }
 	
 	
+	
+	
 	#todoapp {
 	  background: #fff;
 	  background: rgba(255, 255, 255, 0.9);
@@ -53,7 +62,7 @@
 	  border-top-left-radius: 2px;
 	  border-top-right-radius: 2px;
 	  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2),
-	        0 25px 50px 0 rgba(0, 0, 0, 0.15);
+	              0 25px 50px 0 rgba(0, 0, 0, 0.15);
 	  width: 550px;
 	  margin: 130px auto 40px auto;
 
@@ -79,13 +88,9 @@
 	  color: #b3b3b3;
 	  color: rgba(255, 255, 255, 0.3);
 	  text-shadow: -1px -1px rgba(0, 0, 0, 0.2);
-	  -webkit-text-rendering: optimizeLegibility;
-	  -moz-text-rendering: optimizeLegibility;
-	  -ms-text-rendering: optimizeLegibility;
-	  -o-text-rendering: optimizeLegibility;
-	  text-rendering: optimizeLegibility;
+	  @include text-rendering(optimizeLegibility);
 	  
-	  /* Override Vaadin defaults */
+	  // Override Vaadin default
 	  line-height: inherit !important;
 	}
 	
@@ -103,11 +108,7 @@
 		  height: 15px;
 		  z-index: 2;
 		  border-bottom: 1px solid #6c615c;
-		  background: #8d7d77;
-		  background: -webkit-gradient(linear, left top, left bottom, from(rgba(132, 110, 100, 0.8)),to(rgba(101, 84, 76, 0.8)));
-		  background: -webkit-linear-gradient(top, rgba(132, 110, 100, 0.8), rgba(101, 84, 76, 0.8));
-		  background: linear-gradient(top, rgba(132, 110, 100, 0.8), rgba(101, 84, 76, 0.8));
-		  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#9d8b83', EndColorStr='#847670');
+		  @include linear-gradient(rgba(132, 110, 100, 0.8), rgba(101, 84, 76, 0.8), $fallback: #8d7d77);
 		  border-top-left-radius: 1px;
 		  border-top-right-radius: 1px;
 		}
@@ -130,15 +131,8 @@
 	  padding: 6px;
 	  border: 1px solid #999;
 	  box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
-	  -moz-box-sizing: border-box;
-	  -ms-box-sizing: border-box;
-	  -o-box-sizing: border-box;
-	  box-sizing: border-box;
-	  -webkit-font-smoothing: antialiased;
-	  -moz-font-smoothing: antialiased;
-	  -ms-font-smoothing: antialiased;
-	  -o-font-smoothing: antialiased;
-	  font-smoothing: antialiased;
+	  @include box-sizing(border-box);
+	  @include font-smoothing(antialiased);
 	  
 	  padding: 16px 16px 16px 60px !important;
 	  border: none;
@@ -169,11 +163,8 @@
 		  left: -15px;
 		  width: 65px;
 		  height: 41px;
-		  -webkit-transform: rotate(90deg);
-		  -ms-transform: rotate(90deg);
-		  transform: rotate(90deg);
-		  -webkit-appearance: none;
-		  appearance: none;
+		  @include transform( rotate(90deg) );
+		  @include appearance(none);
 
       &:before {
 			  content: '\00bb';
@@ -213,10 +204,7 @@
 		  margin: auto 0;
 		  /* Mobile Safari */
 		  border: none;
-		  -webkit-appearance: none;
-		  -ms-appearance: none;
-		  -o-appearance: none;
-		  appearance: none;
+		  @include appearance(none);
 		  
 		  background: none;
 		  height: 40px;
@@ -246,8 +234,7 @@
 		  margin-left: 45px;
 		  display: block;
 		  line-height: 1.2;
-		  -webkit-transition: color 0.4s;
-		  transition: color 0.4s;
+		  @include transition(color 0.4s);
 		  white-space: normal;
 		}
 		
@@ -267,8 +254,7 @@
 		  margin: auto 0;
 		  font-size: 22px;
 		  color: #a88a8a;
-		  -webkit-transition: all 0.2s;
-		  transition: all 0.2s;
+		  @include transition(all 0.2s);
 
       &:before {
 		    content: '\2716';
@@ -277,9 +263,7 @@
       &:hover {
 			  text-shadow: 0 0 1px #000,
 			       0 0 10px rgba(199, 107, 107, 0.8);
-			  -webkit-transform: scale(1.3);
-			  -ms-transform: scale(1.3);
-			  transform: scale(1.3);
+			  @include transform( scale(1.3) );
 			}
     }
 		
@@ -300,15 +284,8 @@
 		  padding: 6px !important;
 		  border: 1px solid #999;
 		  box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
-		  -moz-box-sizing: border-box;
-		  -ms-box-sizing: border-box;
-		  -o-box-sizing: border-box;
-		  box-sizing: border-box;
-		  -webkit-font-smoothing: antialiased;
-		  -moz-font-smoothing: antialiased;
-		  -ms-font-smoothing: antialiased;
-		  -o-font-smoothing: antialiased;
-		  font-smoothing: antialiased;
+		  @include box-sizing(border-box);
+		  @include font-smoothing(antialiased);
 		  display: none;
 		}
 		
