Incorporated some variables to the theme
Also
- Converted comments to Sass style comments
- Moved body styles into a mixin

--- a/WebContent/VAADIN/themes/todomvc/_todomvc.scss
+++ b/WebContent/VAADIN/themes/todomvc/_todomvc.scss
@@ -4,6 +4,9 @@
 // Import utility mixins
 @import "util/mixins";
 
+// Import variables
+@import "components/variables";
+
 // Import component mixins
 @import "components/resets";
 @import "components/main";
