--- a/WebContent/VAADIN/themes/todomvc-css/styles.css
+++ b/WebContent/VAADIN/themes/todomvc-css/styles.css
@@ -69,6 +69,9 @@ input[type="checkbox"] {
 	      0 25px 50px 0 rgba(0, 0, 0, 0.15);
   width: 550px;
   margin: 130px auto 40px auto;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
 }
 
 
