--- a/WebContent/VAADIN/themes/todomvc/components/_resets.scss
+++ b/WebContent/VAADIN/themes/todomvc/components/_resets.scss
@@ -25,8 +25,8 @@
   }
   
   .v-widget {
-    font-size: 14px;
-    line-height: 1.4em;
+    font-size: $font-size;
+    line-height: $line-height;
   }
   
   .v-nativebutton {
